syntax = "proto3";

package ocr;

option go_package = "github.com/oOSomnus/transflate/api/generated/ocr";

service OCRService  {
  rpc ProcessPDF(PDFRequest) returns (StringListResponse);
}

message PDFRequest {
  bytes pdf_data = 1;
  string language = 2;
}

message StringListResponse {
  repeated string lines = 1;
  uint32 page_num = 2;
}
